[package]
name = "decentralised-lambda-runtime"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "^1"
bytes = "1.0"
http = "0.2"
hyper = { version = "0.14.20", features = ["http1"] }
